fixed git tracking of files

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,13 @@ dependencies {
     implementation files('cls/')
 }
 
+test {
+	filter {
+		includeTestsMatching "WhiteBoxGiven"
+		includeTestsMatching "costTest"
+	}
+}
+
 ///////////////////////////////////////////////////////////////////////
 // Configure Checkstyle
 /////////////////////////////////////////////////////////////////////
