--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-*.DS_Store
-.gradle/*
-build/*
-.idea/*
+# Log file
+*.log
+
+### Eclipse ###
+
+### Eclipse Patch ###
+# Eclipse Core		
+.project
+
+# JDT-specific (Eclipse Java Development Tools)		
+.classpath
+
+### Gradle ###
+.gradle
+/build/
+
+# Mac DS file
+.DS_Store
+
+### IntelliJ ###
+
+# IntelliJ Project Settings folder
+.idea
