updated build.gradle so that costTest would be included during testing

--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,7 @@ dependencies {
 }
 
 test {
-	filter {
-		includeTestsMatching "WhiteBoxGiven"
-		includeTestsMatching "costTest"
-	}
+	exclude "**/BlackBoxGiven.class"
 }
 
 ///////////////////////////////////////////////////////////////////////
