fixed gitignore and removed cached tracked files

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     implementation files('cls/')
 }
 
+test {
+	exclude "**/BlackBoxGiven.class"
+}
+
 ///////////////////////////////////////////////////////////////////////
 // Configure Checkstyle
 /////////////////////////////////////////////////////////////////////
