--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
-// plugins {
+plugins {
 //     id "com.github.spotbugs" version "4.5.1"
-//     id "checkstyle"
-// }
+    id "checkstyle"
+}
 
 apply plugin: 'application'
 apply plugin: 'jacoco'
@@ -28,22 +28,22 @@ test {
 ///////////////////////////////////////////////////////////////////////
 // Configure Checkstyle
 /////////////////////////////////////////////////////////////////////
-// apply plugin: 'checkstyle'
-// checkstyle {
-//   // Keep checkstyle a little quieter
-//   ignoreFailures = true
-//   showViolations = false
-// }
+apply plugin: 'checkstyle'
+checkstyle {
+  // Keep checkstyle a little quieter
+  ignoreFailures = true
+  showViolations = false
+}
 
-// tasks.withType(Checkstyle) {
-//   reports {
-//     html.enabled = true
-//     xml.enabled = false
-//   }
-// }
-// checkstyle {
-//     toolVersion = "8.8"
-// }
+tasks.withType(Checkstyle) {
+  reports {
+    html.enabled = true
+    xml.enabled = false
+  }
+}
+checkstyle {
+    toolVersion = "8.8"
+}
 
 
 ///////////////////////////////////////////////////////////////////////
